--- a/src/main.css
+++ b/src/main.css
@@ -678,6 +678,10 @@ video {
   width: 140px;
 }
 
+.w-6\/12 {
+  width: 50%;
+}
+
 .max-w-xl {
   max-width: 36rem;
 }
@@ -700,6 +704,10 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-row {
