--- a/src/color.css
+++ b/src/color.css
@@ -1,38 +1,25 @@
-  .light {
-	--clr-bg: #ffffff;
-	--clr-bg-card: #f3f3f3;
-	--clr-heading: #1a58a4;
-	--clr-sdbr: #e0e0e0;
-	--clr-link: #0c40b0;
-	--clr-text: #3a4f66;
-	--clr-typing: #3a4f66;
-	--clr-hmbrg: #1a3d61;
-	--clr-btn: #f3f3f3;
-	--clr-btn-border: #1a58a4;
-	--clr-btn-text: #1a58a4;
-	--clr-footer: #003060;
-  }
-  .dark {
-	--clr-bg: #001e3c;
-	--clr-bg-card: #00468d;
-	--clr-heading: #f3f3f3;
-	--clr-sdbr: #003060;
-	--clr-link: #0a4fe5;
-	--clr-text: #b2bac2;
-	--clr-typing: #b2bac2;
-	--clr-hmbrg: #00468d;
-	--clr-btn: #001e3c;
-	--clr-btn-border: #0c40b0;
-	--clr-btn-text: #b2bac2;
-	--clr-footer: #002850;
-  }
-
-
   .light{
-    --clr-primary: #ffffff;
+    --clr-primary: #FFFFFF;
     --clr-secondary: #0652A0;
-  }
+    --clr-link: #0C40B0;
+    --clr-body: #3A4F66;
+    --clr-sidebar: #96BCE2;
+    --clr-tertiary: #003060;
+    --clr-text-custom: #3a4f66; 
+    --clr-border: #0652A0;
+    --clr-border-card: #e5e7eb;
+    --clr-gradient: transparent;
+}
   .dark{
     --clr-primary: #001E3C;
-    
-  }
+    --clr-secondary: #F3F3F3;
+    --clr-link: #0A4FE5;
+    --clr-body: #F3F3F3;
+    --clr-sidebar: #003060;
+    --clr-tertiary: #042b52;
+    --clr-text-custom: #b2bac2;
+    --clr-border: #0c40b0;
+    --clr-border-card:  #1e4976;
+    --clr-gradient: linear-gradient(to right bottom, #007fff, #0059b2 120%);
+}
+
