--- a/src/main.css
+++ b/src/main.css
@@ -602,6 +602,18 @@ video {
   margin-top: 0.75rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -791,6 +803,22 @@ video {
   border-color: var(--clr-bg-card);
 }
 
+.border-\[color\:var\(--clr-border\)\] {
+  border-color: var(--clr-border);
+}
+
+.border-\[color\:var\(--clr-button\=border\)\] {
+  border-color: var(--clr-button=border);
+}
+
+.border-\[color\:var\(--clr-button-border\)\] {
+  border-color: var(--clr-button-border);
+}
+
+.border-\[color\:var\(--clr-secondary\)\] {
+  border-color: var(--clr-secondary);
+}
+
 .bg-\[color\:var\(--clr-footer\)\] {
   background-color: var(--clr-footer);
 }
@@ -804,6 +832,22 @@ video {
   background-color: var(--clr-bg-card);
 }
 
+.bg-\[color\:var\(--clr-primari\)\] {
+  background-color: var(--clr-primari);
+}
+
+.bg-\[color\:var\(--clr-primary\)\] {
+  background-color: var(--clr-primary);
+}
+
+.bg-\[color\:var\(--clr-tertiary\)\] {
+  background-color: var(--clr-tertiary);
+}
+
+.bg-\[color\:var\(--clr-border\)\] {
+  background-color: var(--clr-border);
+}
+
 .object-cover {
   object-fit: cover;
 }
@@ -814,6 +858,10 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .py-8 {
@@ -975,6 +1023,30 @@ video {
   color: var(--clr-typing);
 }
 
+.text-\[color\:var\(--clr-secondary\)\] {
+  color: var(--clr-secondary);
+}
+
+.text-\[color\:var\(--clr-text-custom\)\] {
+  color: var(--clr-text-custom);
+}
+
+.text-\[color\:var\(--clr-body\)\] {
+  color: var(--clr-body);
+}
+
+.text-\[color\:var\(--clr-border\)\] {
+  color: var(--clr-border);
+}
+
+.text-\[color\:var\(--clr-btn-body\)\] {
+  color: var(--clr-btn-body);
+}
+
+.text-\[color\:var\(--clr-link\)\] {
+  color: var(--clr-link);
+}
+
 .opacity-100 {
   opacity: 1;
 }
@@ -1034,6 +1106,8 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@import "./color.css";
+
 @font-face {
   font-family: 'inter-extra-bold';
   font-weight: 800;
@@ -1077,69 +1151,49 @@ video {
 }
 
 .app {
-	background-color: var(--clr-bg);
+	background-color: var(--clr-primary);
   }
 
-  .light {
-	--clr-bg: #ffffff;
-	--clr-bg-card: #f3f3f3;
-	--clr-heading: #1a58a4;
-	--clr-sdbr: #e0e0e0;
-	--clr-link: #0c40b0;
-	--clr-text: #3a4f66;
-	--clr-typing: #3a4f66;
-	--clr-hmbrg: #1a3d61;
-	--clr-btn: #f3f3f3;
-	--clr-btn-border: #1a58a4;
-	--clr-btn-text: #1a58a4;
-	--clr-footer: #003060;
-  }
-  .dark {
-	--clr-bg: #001e3c;
-	--clr-bg-card: #00468d;
-	--clr-heading: #f3f3f3;
-	--clr-sdbr: #003060;
-	--clr-link: #0a4fe5;
-	--clr-text: #b2bac2;
-	--clr-typing: #b2bac2;
-	--clr-hmbrg: #00468d;
-	--clr-btn: #001e3c;
-	--clr-btn-border: #0c40b0;
-	--clr-btn-text: #b2bac2;
-	--clr-footer: #002850;
-  }
-  .hover\:scale-110:hover {
+.hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-  .hover\:scale-105:hover {
+
+.hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-  .hover\:border-\[color\:var\(--clr-link\)\]:hover {
+
+.hover\:border-\[color\:var\(--clr-link\)\]:hover {
   border-color: var(--clr-link);
 }
-  .hover\:bg-\[color\:var\(--clr-link\)\]:hover {
+
+.hover\:bg-\[color\:var\(--clr-link\)\]:hover {
   background-color: var(--clr-link);
 }
-  .hover\:text-white:hover {
+
+.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-  .hover\:text-\[color\:var\(--clr-link\)\]:hover {
+
+.hover\:text-\[color\:var\(--clr-link\)\]:hover {
   color: var(--clr-link);
 }
-  .hover\:opacity-100:hover {
+
+.hover\:opacity-100:hover {
   opacity: 1;
 }
-  .hover\:shadow-\[0_0_30px_1px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]:hover {
+
+.hover\:shadow-\[0_0_30px_1px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]:hover {
   --tw-shadow: 0 0 30px 1px rgba(0,0,0,0.3);
   --tw-shadow-colored: 0 0 30px 1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-  @media (max-width: 600px) {
+
+@media (max-width: 600px) {
 
   .xs\:order-2 {
     order: 2;
@@ -1165,6 +1219,10 @@ video {
 
   .xs\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .xs\:mb-3 {
+    margin-bottom: 0.75rem;
   }
 
   .xs\:w-10\/12 {
@@ -1276,3 +1334,4 @@ video {
     line-height: 2rem;
   }
 }
+
