--- a/src/color.css
+++ b/src/color.css
@@ -3,7 +3,7 @@
     --clr-secondary: #0652A0;
     --clr-link: #0C40B0;
     --clr-body: #3A4F66;
-    --clr-sidebar: #96BCE2;
+    --clr-sidebar: #CAE5FF;
     --clr-tertiary: #003060;
     --clr-text-custom: #3a4f66; 
     --clr-border: #0652A0;
