--- a/src/color.css
+++ b/src/color.css
@@ -9,6 +9,8 @@
     --clr-border: #0652A0;
     --clr-border-card: #e5e7eb;
     --clr-gradient: transparent;
+    --clr-gradient-text:#0073e8;
+    --clr-gradient-text-secondary: #025cb8;
 }
   .dark{
     --clr-primary: #001E3C;
@@ -21,5 +23,7 @@
     --clr-border: #0c40b0;
     --clr-border-card:  #1e4976;
     --clr-gradient: linear-gradient(to right bottom, #007fff, #0059b2 120%);
+    --clr-gradient-text:#F3F3F3;
+    --clr-gradient-text-secondary: #b2bac2;
 }
 
