design update 404 page

--- a/src/main.css
+++ b/src/main.css
@@ -638,6 +638,27 @@ video {
   min-height: 300px;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.min-h-\[500px\] {
+  min-height: 500px;
+}
+
+.min-h-\[100vh\] {
+  min-height: 100vh;
+}
+
+.min-h-fit {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
+.min-h-\[600px\] {
+  min-height: 600px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -760,6 +781,18 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .rounded-full {
@@ -963,6 +996,22 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[80px\] {
+  font-size: 80px;
+}
+
+.text-\[280px\] {
+  font-size: 280px;
+}
+
+.text-\[180px\] {
+  font-size: 180px;
+}
+
+.text-\[150px\] {
+  font-size: 150px;
 }
 
 .capitalize {
@@ -1292,8 +1341,20 @@ video {
     line-height: 1.75rem;
   }
 
+  .xs\:text-\[100px\] {
+    font-size: 100px;
+  }
+
   .xs\:leading-tight {
     line-height: 1.25;
+  }
+
+  .xs\:text-\[100\] {
+    color: 100;
+  }
+
+  .xs\:text-\[100\[x\]\] {
+    color: 100[x];
   }
 }
 
