--- a/src/main.css
+++ b/src/main.css
@@ -1269,12 +1269,22 @@ video {
     gap: 2.5rem;
   }
 
+  .xs\:space-y-1 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+  }
+
   .xs\:rounded-\[8px\] {
     border-radius: 8px;
   }
 
   .xs\:p-4 {
     padding: 1rem;
+  }
+
+  .xs\:p-2 {
+    padding: 0.5rem;
   }
 
   .xs\:px-5 {
@@ -1343,6 +1353,20 @@ video {
 
   .xs\:text-\[100px\] {
     font-size: 100px;
+  }
+
+  .xs\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .xs\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .xs\:text-\[70px\] {
+    font-size: 70px;
   }
 
   .xs\:leading-tight {
